--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskBatchEdit/taskEditDetails.xhtml
@@ -93,7 +93,7 @@
                                     </td>
                                     <td>
                                         <h:outputText
-                                                value="#{CurrentTaskForm.batchHelper.currentStep.processingStatusEnum.title}"/>
+                                                value="#{CurrentTaskForm.batchHelper.currentStep.processingStatus.title}"/>
                                     </td>
                                 </tr>
 
@@ -129,7 +129,7 @@
                                         </td>
                                         <td>
                                             <h:outputText
-                                                    value="#{CurrentTaskForm.batchHelper.currentStep.editTypeEnum.title}"/>
+                                                    value="#{CurrentTaskForm.batchHelper.currentStep.editType.title}"/>
                                         </td>
                                     </tr>
                                 </ui:fragment>
