--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditDetails.xhtml
@@ -27,12 +27,9 @@
         <p:row>
             <div>
                 <p:outputLabel for="status" value="#{msgs.status}"/>
-                <p:selectOneMenu id="status" value="#{ProcessForm.task.processingStatusAsString}" required="#{empty param['editForm:saveButtonToggler']}" class="input">
+                <p:selectOneMenu id="status" value="#{ProcessForm.task.processingStatus}" required="#{empty param['editForm:saveButtonToggler']}" class="input">
                     <f:selectItem itemValue="" itemLabel="#{msgs.selectPlease}"/>
-                    <f:selectItem itemValue="0" itemLabel="#{msgs.locked}"/>
-                    <f:selectItem itemValue="1" itemLabel="#{msgs.statusOpen}"/>
-                    <f:selectItem itemValue="2" itemLabel="#{msgs.statusInProcessing}"/>
-                    <f:selectItem itemValue="3" itemLabel="#{msgs.statusDone}"/>
+                    <f:selectItems value="#{ProcessForm.taskStatuses}"/>
                     <p:ajax event="change" oncomplete="toggleSave()"/>
                 </p:selectOneMenu>
             </div>
