Remove not rendered style attribute

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/roleEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/roleEdit/details.xhtml
@@ -56,10 +56,8 @@
                                     itemLabel="#{authority.getTitleWithoutSuffix()}"
                                     itemValue="#{authority}"
                                     onTransfer="toggleSave()">
-                            <f:facet name="sourceCaption"
-                                     style="color: #000;">#{msgs.available}</f:facet>
-                            <f:facet name="targetCaption"
-                                     style="color: #000;">#{msgs.assigned}</f:facet>
+                            <f:facet name="sourceCaption">#{msgs.available}</f:facet>
+                            <f:facet name="targetCaption">#{msgs.assigned}</f:facet>
                         </p:pickList>
                     </h:panelGroup>
 
@@ -79,10 +77,8 @@
                                     onTransfer="toggleSave()"
                                     itemLabel="#{authority.getTitleWithoutSuffix()}"
                                     itemValue="#{authority}">
-                            <f:facet name="sourceCaption"
-                                     style="color: #000;">#{msgs.available}</f:facet>
-                            <f:facet name="targetCaption"
-                                     style="color: #000;">#{msgs.assigned}</f:facet>
+                            <f:facet name="sourceCaption">#{msgs.available}</f:facet>
+                            <f:facet name="targetCaption">#{msgs.assigned}</f:facet>
                         </p:pickList>
                     </h:panelGroup>
                 </p:panelGrid>
