Set search term field only to required when search OPAC button is clicked

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processImport.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processImport.xhtml
@@ -56,7 +56,7 @@
                          rendered="#{ImportForm.selectedCatalog ne null}"
                          value="#{ImportForm.searchTerm}"
                          class="input"
-                         required="true"/>
+                         required="#{not empty param['editForm:processFromTemplateTabView:performCatalogSearch']}"/>
         </h:panelGroup>
         <h:panelGroup layout="block"
                       id="catalogSearchButton">
