--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/workflowEdit/workflowEditDetails.xhtml
@@ -45,8 +45,7 @@
             <p:selectOneMenu id="status" value="#{WorkflowForm.workflow.status}"
                              required="#{empty param['editForm:saveButtonToggler']}" class="input">
                 <f:selectItem itemValue="" itemLabel="#{msgs.selectPlease}"/>
-                <f:selectItems value="#{WorkflowForm.statuses}" var="status" itemValue="#{status}"
-                               itemLabel="#{msgs[status.toString().toLowerCase()]}"/>
+                <f:selectItems value="#{WorkflowForm.workflowStatuses}"/>
                 <p:ajax event="change" oncomplete="toggleSave()"/>
             </p:selectOneMenu>
         </p:row>
