--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processImport.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processImport.xhtml
@@ -14,8 +14,9 @@
 <ui:composition
         xmlns="http://www.w3.org/1999/xhtml"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        xmlns:p="http://primefaces.org/ui" xmlns:h="http://java.sun.com/jsf/html">
+        xmlns:p="http://primefaces.org/ui">
 
     <p:panelGrid layout="grid" columns="1" cellpadding="10">
         <div>
@@ -65,9 +66,10 @@
                              action="#{ImportForm.search}"
                              value="#{msgs.searchOPAC}"
                              title="#{msgs.searchOPAC}"
+                             onstart="PF('loadingDialog').show()"
+                             oncomplete="PF('loadingDialog').hide()"
                              icon="fa fa-search" iconPos="right"
                              update="editForm hitlist"/>
         </h:panelGroup>
     </p:panelGrid>
-    <p:ajaxStatus onstart="PF('loadingDialog').show()" oncomplete="PF('loadingDialog').hide()"/>
 </ui:composition>
