--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/ldapgroupList.xhtml
@@ -41,7 +41,7 @@
                 </h:link>
                 <h:commandLink action="#{LdapGroupForm.duplicateLdapGroup(item.id)}" title="#{msgs.duplicateLdapGroup}"
                                rendered="#{SecurityAccessController.hasAuthorityGlobal('addLdapGroup')}">
-                    <i class="fa fa-clone fa-lg"/>
+                    <h:outputText><i class="fa fa-clone fa-lg"/></h:outputText>
                 </h:commandLink>
                 <p:commandLink id="deleteLdapgroup" action="#{LdapGroupForm.delete}" title="#{msgs.delete}"
                                rendered="#{SecurityAccessController.hasAuthorityGlobal('deleteLdapGroup')}"
