Style metadata editor columns according to restrictions

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1077,6 +1077,10 @@ form#metadata div label,
     right: 16px;
 }
 
+.collapsibleWrapper > .columnExpandButton:disabled {
+    display: none;
+}
+
 .collapsibleWrapper.collapsed > .columnExpandButton {
     right: 0;
     top: 0;
@@ -1198,6 +1202,11 @@ form#metadata div label,
 
 #metadataEditorWrapper .resizer.disabled {
     pointer-events: none;
+}
+
+#metadataEditorWrapper .resizer.disabled::before,
+#metadataEditorWrapper .resizer.disabled::after {
+    display: none;
 }
 
 #metadataEditorWrapper #verticalResizer {
